<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_search_name">Поиск</string>
    <string name="button_media_name">Медиатека</string>
    <string name="button_settings_name">Настройки</string>
    <string name="settings_text_blackTheme">Темная тема</string>
    <string name="settings_text_share">Поделиться приложением</string>
    <string name="settings_text_support">Написать в поддержку</string>
    <string name="settings_text_userAgreement">Пользовательское соглашение</string>
    <string name="settings_share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_share_choose_title">Выберите мессенджер</string>
    <string name="settings_support_email">veliivan@yandex.ru</string>
    <string name="settings_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_arrow_forward_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="search_text_name">Поиск</string>
    <string name="search_text_hint">Поиск</string>
    <string name="search_text_nothing">Ничего не найдено</string>
    <string name="search_text_internet_problem">Проблемы со связью</string>
    <string name="search_text_check_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_text_update">Обновить</string>
    <string name="search_text_you_searched">Вы искали</string>
    <string name="search_text_clear_history">Очистить историю</string>
    <string name="media_text_duration">Длительность</string>
    <string name="media_text_album">Альбом</string>
    <string name="media_text_year">Год</string>
    <string name="media_text_genre">Жанр</string>
    <string name="media_text_country">Страна</string>
</resources>