<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/MainTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_22"
        android:text="@string/app_name" />
    <Button
        android:id="@+id/main_search_button"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button_search_name"
        android:textSize="@dimen/main_text_22"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/main_cornerRadius"
        app:icon="@drawable/search"
        app:iconPadding="@dimen/main_iconPadding"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />
    <Button
        android:id="@+id/main_media_button"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button_media_name"
        android:textSize="@dimen/main_text_22"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/main_cornerRadius"
        app:icon="@drawable/media"
        app:iconPadding="@dimen/main_iconPadding"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />
    <Button
        android:id="@+id/main_settings_button"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button_settings_name"
        android:textSize="@dimen/main_text_22"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/main_cornerRadius"
        app:icon="@drawable/settings"
        app:iconPadding="@dimen/main_iconPadding"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />

</androidx.appcompat.widget.LinearLayoutCompat>