<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder24"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/media_margin_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder24"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/media_margin_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/media_button_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24"
        app:tint="@color/LightDarkFont" />

    <ImageView
        android:id="@+id/media_track_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_margin_24"
        tools:src="@drawable/ic_placeholder_312"
        app:layout_constraintStart_toStartOf="@id/leftBorder24"
        app:layout_constraintEnd_toEndOf="@id/rightBorder24"
        app:layout_constraintTop_toBottomOf="@+id/media_button_back"
        app:tint="@color/grey" />

    <TextView
        style="@style/MediaTrackTextHead"
        android:id="@+id/media_track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_margin_24"
        android:textSize="@dimen/text_22"
        app:layout_constraintStart_toStartOf="@id/leftBorder24"
        app:layout_constraintEnd_toEndOf="@id/rightBorder24"
        app:layout_constraintTop_toBottomOf="@+id/media_track_image"
        tools:text="Название трека"
        />
    <TextView
        style="@style/MediaTrackTextHead"
        android:id="@+id/media_track_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/text_14"
        app:layout_constraintStart_toStartOf="@id/leftBorder24"
        app:layout_constraintEnd_toEndOf="@id/rightBorder24"
        app:layout_constraintTop_toBottomOf="@+id/media_track_name"
        tools:text="Исполнитель"
        />

    <ImageButton
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        app:srcCompat="@drawable/ic_addtrack_51"
        app:layout_constraintStart_toStartOf="@id/leftBorder24"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlay"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPlay"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <ImageButton
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        app:srcCompat="@drawable/ic_play_100"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd"
        app:layout_constraintEnd_toStartOf="@+id/buttonLike"
        app:layout_constraintTop_toBottomOf="@+id/media_track_artist"/>

    <ImageButton
        android:id="@+id/buttonLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        app:srcCompat="@drawable/ic_def_like_51"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay"
        app:layout_constraintEnd_toEndOf="@id/rightBorder24"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPlay" />

    <TextView
        style="@style/MediaTrackTextHead"
        android:id="@+id/media_track_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textFontWeight="500"
        android:textSize="@dimen/text_14"
        android:textColor="@color/LightDarkFont"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlay"
        app:layout_constraintStart_toStartOf="@+id/buttonPlay"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlay"
        tools:text="0:00"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder16"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/media_margin_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder16"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/media_margin_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        style="@style/MediaTrackInformationHead"
        android:id="@+id/media_inf_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/media_text_duration"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintEnd_toStartOf="@id/media_data_duration"
        app:layout_constraintTop_toBottomOf="@+id/media_track_duration"
        app:layout_constraintBottom_toTopOf="@+id/media_inf_album"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        style="@style/MediaTrackInformationData"
        android:id="@+id/media_data_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/media_inf_duration"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintTop_toTopOf="@+id/media_inf_duration"
        app:layout_constraintBottom_toBottomOf="@+id/media_inf_duration"
        tools:text="5:00" />

    <TextView
        style="@style/MediaTrackInformationHead"
        android:id="@+id/media_inf_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_margin_9"
        android:text="@string/media_text_album"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintEnd_toStartOf="@id/media_data_album"
        app:layout_constraintTop_toBottomOf="@+id/media_inf_duration"
        app:layout_constraintBottom_toTopOf="@+id/media_inf_year" />

    <TextView
        style="@style/MediaTrackInformationData"
        android:id="@+id/media_data_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/media_inf_album"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintTop_toTopOf="@+id/media_inf_album"
        app:layout_constraintBottom_toBottomOf="@+id/media_inf_album"
        tools:text="Название альбома (год выпуска)" />

    <TextView
        style="@style/MediaTrackInformationHead"
        android:id="@+id/media_inf_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_margin_9"
        android:text="@string/media_text_year"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintEnd_toStartOf="@id/media_data_year"
        app:layout_constraintTop_toBottomOf="@+id/media_inf_album"
        app:layout_constraintBottom_toTopOf="@+id/media_inf_genre" />

    <TextView
        style="@style/MediaTrackInformationData"
        android:id="@+id/media_data_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/media_inf_year"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintTop_toTopOf="@+id/media_inf_year"
        app:layout_constraintBottom_toBottomOf="@+id/media_inf_year"
        tools:text="1986" />

    <TextView
        style="@style/MediaTrackInformationHead"
        android:id="@+id/media_inf_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_margin_9"
        android:text="@string/media_text_genre"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintEnd_toStartOf="@id/media_data_genre"
        app:layout_constraintTop_toBottomOf="@+id/media_inf_year"
        app:layout_constraintBottom_toTopOf="@+id/media_inf_country" />

    <TextView
        style="@style/MediaTrackInformationData"
        android:id="@+id/media_data_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/media_inf_genre"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintTop_toTopOf="@+id/media_inf_genre"
        app:layout_constraintBottom_toBottomOf="@+id/media_inf_genre"
        tools:text="Название музыкального жанра" />

    <TextView
        style="@style/MediaTrackInformationHead"
        android:id="@+id/media_inf_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_margin_9"
        android:text="@string/media_text_country"
        app:layout_constraintStart_toStartOf="@id/leftBorder16"
        app:layout_constraintEnd_toStartOf="@id/media_data_country"
        app:layout_constraintTop_toBottomOf="@+id/media_inf_genre" />

    <TextView
        style="@style/MediaTrackInformationData"
        android:id="@+id/media_data_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/media_inf_country"
        app:layout_constraintEnd_toEndOf="@id/rightBorder16"
        app:layout_constraintTop_toTopOf="@+id/media_inf_country"
        app:layout_constraintBottom_toBottomOf="@+id/media_inf_country"
        tools:text="Название страны" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>